--- a/style.css
+++ b/style.css
@@ -43,8 +43,9 @@ body {
 }
 
 .card-img {
-    border-radius: 3vh;
-    margin: 2rem auto;
+    border-radius: 30px;
+    margin: 1rem;
+    width: 90%;
 }
 
 .card-link {
