--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .head {
     text-align: center;
-    font-size: 10rem;
+    font-size: 8vw;
 }
 
 .content-bin {
@@ -23,7 +23,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     flex-grow: 1rem;
-    width: 100vw;
+    width: 100%;
 }
 
 .card {
@@ -31,18 +31,19 @@ body {
     color: #F3E391;
     text-align: center;
     width: 30%;
-    height: 500px;
+    height: 37vw;
     border-radius: 30px;
     box-shadow: 1rem 1rem 4px #616138;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 3% auto;
+    margin: 2% auto;
 }
 
 .card-title {
-    font-size: 3rem;
+    font-size: 3vw;
+    margin: 1%;
 }
 
 .card-img {
@@ -51,22 +52,40 @@ body {
 
 .card-link {
     color: #CFB879;
-    font-size: 2rem;
+    font-size: 2.25vw;
 }
+
 @media (max-width: 920px) {
 .head {
-    font-size: 8rem;
+    font-size: 12.5vw;
 }
 .card  {
     width: 45%;
+    height: 60vw;
   }
+  .card-title {
+    font-size: 4.5vw;
 }
 
-@media (max-width: 600px) {
+.card-link {
+    font-size: 4vw;
+}
+}
+
+@media (max-width: 620px) {
     .head {
-        font-size: 7rem;
+        font-size: 15vw;
     }
     .card  {
-        width: 85%;
+        width: 90%;
+        height: 90vw;
+        margin: 4% auto;
       }
+      .card-title {
+        font-size: 6.5vw;
     }
+    
+    .card-link {
+        font-size: 5vw;
+    }
+}
