--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 2% auto;
+    transition: all 0.3s;
 }
 
 .card-title {
@@ -55,10 +56,11 @@ body {
     font-size: 2.25vw;
 }
 
-@media (max-width: 920px) {
+@media screen and (max-width: 920px) {
 .head {
     font-size: 12.5vw;
 }
+
 .card  {
     width: 45%;
     height: 60vw;
@@ -72,12 +74,12 @@ body {
 }
 }
 
-@media (max-width: 620px) {
+@media screen and (max-width: 620px) {
     .head {
         font-size: 15vw;
     }
     .card  {
-        width: 87.5%;
+        width: 80%;
         height: 90vw;
         margin: 4% auto;
       }
@@ -89,3 +91,6 @@ body {
         font-size: 5vw;
     }
 }
+
+.card:hover {
+    transform: scale(1.5);
